--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second GitHub Repository</title>
+    <link rel="stylesheet" href="Style/Blogs.css">
 </head>
 <body>
-    
+    <div>
+        <h3 class="Head">My First Travel Blog</h3>
+        <p class="Para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed natus sunt, quo id sequi quidem tempore quaerat mollitia commodi corrupti velit cum quisquam vero perspiciatis minus aperiam dolorum harum molestias!</p>
+    </div>
 </body>
 </html>
